Fix: Update production configuration and manifest

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,1 @@
-# Production environment configuration
-REACT_APP_API_URL=https://your-production-api.com
+REACT_APP_API_URL=https://cc-parser-ilp8.vercel.app
