--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -18,6 +18,12 @@
       }
     }
   ],
+  "functions": {
+    "src/index.js": {
+      "memory": 1024,
+      "maxDuration": 60
+    }
+  },
   "env": {
     "NODE_ENV": "production"
   }
