--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,30 +1,21 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "src/index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "src/index.js", "use": "@vercel/node" }
   ],
   "routes": [
     {
       "src": "/(.*)",
       "dest": "src/index.js",
       "headers": {
-        "Access-Control-Allow-Origin": "https://cc-parser.vercel.app",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET,POST,OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization",
-        "Access-Control-Allow-Credentials": "true"
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
       }
     }
   ],
   "functions": {
-    "src/index.js": {
-      "memory": 1024,
-      "maxDuration": 60
-    }
+    "src/index.js": { "memory": 1024, "maxDuration": 60 }
   },
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "env": { "NODE_ENV": "production" }
 }
