--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,4 @@
 # Backend API URL
+REACT_APP_API_URL=http://localhost:5000
 
-# For local development
-REACT_APP_API_URL=http://localhost:5000/api
-
-# For production (update after deploying backend)
-REACT_APP_API_URL=https://your-backend-url.railway.app/api
+REACT_APP_API_URL=https://your-backend-url.example.com
